--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,7 +36,7 @@ bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # CTRL+ALT+L to lock the screen
-bindsym Mod1+Control+l exec i3lock -c 000000
+bindsym Mod1+Control+l exec i3lock -c 3f3f3f
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id j4-dmenu-desktop
@@ -203,7 +203,7 @@ mode "moveit" {
 bindsym $mod+m focus floating; mode "moveit"
 
 # will remove borders when full screen
-hide_edge_borders smart
+hide_edge_borders both
 
 focus_follows_mouse no
 
