--- a/.config/i3/config
+++ b/.config/i3/config
@@ -152,8 +152,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# configure abnt2
-exec "setxkbmap -model abnt2 -layout br -variant abnt2"
+# configure the US layout
+exec "setxkbmap -rules evdev -model evdev -layout us -variant altgr-intl"
+#exec "setxkbmap -model abnt2 -layout br -variant abnt2"
 
 # start network-manager-applet
 exec --no-startup-id nm-applet
