move and resize adjustments

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,7 +36,7 @@ bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # CTRL+ALT+L to lock the screen
-bindsym Mod1+Control+l exec i3lock -c 3f3f3f
+bindsym Mod1+Control+l exec i3lock -c 3f3f3f -f
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id j4-dmenu-desktop
@@ -134,16 +134,22 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym j resize shrink width 40 px or 40 ppt
+        bindsym k resize grow height 40 px or 40 ppt
+        bindsym l resize shrink height 40 px or 40 ppt
+        bindsym semicolon resize grow width 40 px or 40 ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left resize grow width 10 px or 10 ppt
-        bindsym Down resize shrink height 10 px or 10 ppt
-        bindsym Up resize grow height 10 px or 10 ppt
-        bindsym Right resize shrink width 10 px or 10 ppt
+        bindsym Left resize grow width 150 px or 150 ppt
+        bindsym Down resize shrink height 150 px or 150 ppt
+        bindsym Up resize grow height 150 px or 150 ppt
+        bindsym Right resize shrink width 150 px or 150 ppt
+
+        # same bindings, but for the arrow keys
+        bindsym Shift+Left resize grow width 10 px or 10 ppt
+        bindsym Shift+Down resize shrink height 10 px or 10 ppt
+        bindsym Shift+Up resize grow height 10 px or 10 ppt
+        bindsym Shift+Right resize shrink width 10 px or 10 ppt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
@@ -202,10 +208,16 @@ bindsym --release Shift+Print exec "escrotum -s -C && notify-send -t 1500 'Scree
 for_window [class="Emacs"] layout tabbed
 
 mode "moveit" {
-    bindsym Up move up 20px
-    bindsym Left move left 20px
-    bindsym Down move down 20px
-    bindsym Right move right 20px
+    bindsym Up move up 150px
+    bindsym Left move left 150px
+    bindsym Down move down 150px
+    bindsym Right move right 150px
+
+    bindsym Shift+Up move up 10px
+    bindsym Shift+Left move left 10px
+    bindsym Shift+Down move down 10px
+    bindsym Shift+Right move right 10px
+
     bindsym Mod4+m mode "default"
 }
 
